# loom

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  agent_platform.db  alembic.ini  docker-compose.yaml  patch6.py  pyproject.toml  scratch_hermes.py
agents/echo/: adapter.py  manifest.yaml
agents/hermes_echo/: manifest.yaml
agents/myj/: adapter.py  manifest.yaml
agents/promo_recommendation/: adapter.py  manifest.yaml
alembic/: env.py
alembic/versions/: 4474f21970f1_add_composite_indexes_unique_constraint_.py  4dcf2bc95572_initial_tables.py  a7e3f2d01b84_add_missing_tables_and_audit_hash.py  bc55e88990e5_add_execution_logs_table.py  dbbf495e5dfc_add_dead_letter_queue.py
config/: agent_ownership.yaml  agent_ownership.yaml.example
docs/: README.md  ai-human-vibecoding-rd-platform.md  consistency-check.md  development-plan-s2.md  development-plan-s5.md  development-plan-s7.md  development-plan-s9.md  development-tests-devflow.md  development-tests-s9.md  development-tests-security.md  devflow-task-pack.md  document-stage-map.md  gitlab.md  hermes-runtime.md  implementation-gap.md  manual-verification-guide.md  mvp.md  next-stage-design-plan.md  plane-docs-acquisition.md  plane.md  pre-development-checklist.md
docs/00-baseline/: consistency-check.md  pre-development-checklist.md
docs/01-contracts/: agent-manifest-v1.md  agent-request-response.md  devflow-task-pack.md
docs/02-architecture/: agent-platform-core-design.md  agent-platform-design.md  ai-human-vibecoding-rd-platform.md
docs/03-runtime/: hermes-backend-spike.md  hermes-runtime.md
docs/04-devflow/: devflow-runner-workspace-design.md  devflow-state-sync-design.md  gitlab.md  plane.md
docs/05-production/: package-artifact-release-design.md  persistence-storage-design.md  security-tenant-policy-design.md
docs/07-evolution/: README.md  candidate-contract.md  evolution-engine-design.md  evolution-verification-guide.md  hermes-lessons-for-self-evolution.md  improvement-proposal-contract.md  memory-and-skills-design.md  risk-policy.md  rollout-plan.md  self-evolving-agent-system.md
docs/99-reference/: plane-docs-acquisition.md
docs/adr/: 0001-architecture-baseline.md  0002-storage-baseline.md
docs/contracts/: agent-manifest-v1.md  agent-request-response.md
scripts/: claude_code_local_e2e.py  cleanup_sessions.py  codex_e2e_test.py  demo_self_evolution.py  deploy_agent.py  devflow_e2e_test.py  devflow_real_e2e.py  devflow_webhook_real_e2e.py  e2e_full.py  evolution_smoke_test.py  health_patrol.py  hermes_echo_e2e.py  load_test.py  package_agent.py  promote_agent.py  run_agent_eval.py  run_devflow_reliability_e2e.py  run_evolution_e2e_suite.py  run_security_reliability_e2e.py  smoke_test.py  validate_manifest.py  validate_production.py
src/agent_platform/: __init__.py  (+3 more)
tests/: conftest.py
(+331 files in other folders)
