[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-platform"
version = "0.1.0"
description = "Production and AI-assisted development platform for business agents"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "alembic>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
